# Image-Stitching

./: .gitignore  CMakeLists.txt  Doxygen.in  LICENSE  README.md
.github/workflows/: ci.yml
include/blending/: blend.hpp
include/featues/: features.hpp
include/feature_extraction/: extract_feature.hpp
include/feature_match/: match_feature.hpp
include/features/: features.hpp
include/image_matching/: match_image.hpp
include/stitch/: stitch.hpp
include/utils/: argument_parser.hpp  image_reader.hpp  image_visualizer.hpp  instrument.hpp  scoped_timer.hpp  time_units.hpp  types.hpp
src/: image_stitching.cpp
tests/: CMakeLists.txt  test_blending.cpp  test_feature.cpp  test_image_reader.cpp  test_stitch.cpp
